@@ -19,7 +19,7 @@ JSON::XS                    = 0
 Module::Pluggable           = 0
 POE                         = 1.292
 POE::Component::Client::DNS = 0.99
-POE::Component::IRC::State  = 6.45
+POE::Component::IRC::State  = 6.46
 Proc::Daemon                = 0.02
 Term::ANSIColor             = 0
 YAML::XS                    = 0
